# RuleForge

./: .gitignore  AGENTS.md  README.md  README.zh-CN.md  pyproject.toml
.github/workflows/: ci.yml
ruleforge/: __init__.py  analyzer.py  audit.py  cli.py  drift.py  generator.py  lint.py
tests/: test_analyzer.py  test_audit.py  test_drift.py  test_generator.py  test_lint.py
