[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ruleforge-ai"
version = "0.1.0"
description = "Generate AI assistant rules (CLAUDE.md, .cursorrules, copilot-instructions) from codebase analysis"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Yufeng He", email = "40085740+he-yufeng@users.noreply.github.com" }]
keywords = [
    "ai",
    "claude",
    "cursor",
    "copilot",
    "rules",
    "codegen",
    "developer-tools",
    "llm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
]
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "toml>=0.10",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
ruleforge = "ruleforge.cli:main"

[project.urls]
Homepage = "https://github.com/he-yufeng/RuleForge"
Repository = "https://github.com/he-yufeng/RuleForge"
Issues = "https://github.com/he-yufeng/RuleForge/issues"

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ruleforge"]
